<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/nav_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp">
    <TextView
        android:paddingLeft="22dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/navigation_panel"
        android:textSize="28sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_gravity="top">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/avatar"/>
        <LinearLayout
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                    android:id="@+id/Gmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:text="@string/more"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

</LinearLayout>
